# GeneralNewsExtractor

./: .gitignore  .gne  .gne_sample  CHANGELOG.md  GeneralNewsCrawler.py  LICENSE  MANIFEST.in  NewsParser.py  Pipfile  README.md  README_CN.md  example.py  example_list.py  example_visiable.py  pypi_desc.md  pyproject.toml  requirements.txt  result.txt  setup.cfg  setup.py  test.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-pages.yml
docs/: conf.py  index.rst  index_en.rst
extractor/: AuthorExtractor.py  ContentExtractor.py  TitleExtractor.py
gne/: __init__.py  defaults.py  exceptions.py  llm_crawler.py  utils.py
gne/classfier/: ArticleClassifier.py
gne/extractor/: AuthorExtractor.py  ContentExtractor.py  ListExtractor.py  MetaExtractor.py  TimeExtractor.py  TitleExtractor.py  __init__.py
site/: CNAME  index.html
test/163/: 4.html
test/guancha/: 3.html  guancha.html
test/qq/: qq.html
test/readhub/: readhub.html
test/sina/: 2.html  3.html
test/toutiao/: 2.html
test_list_page/163/: 1.html  2.html
test_list_page/netease_forum/: 1.html
test_list_page/tieba/: 1.html
tests/163/: 1.html  2.html  3.html  5.html  6.html  7.html  8.html  9.html
tests/baijiahao/: 1.html  2.html  3.html  4.html
tests/cjddsb/: 1.html
tests/cjn/: 1.html
tests/cmse/: 1.html
tests/csdn/: 1.html
tests/ednchina/: 1.html
tests/gamersky/: gamersky.html
tests/gsc/: 1.html
tests/guancha/: 2.html
tests/gzggw/: 1.html
tests/hexun/: 1.html
tests/huanqiu/: 1.html
tests/ifeng/: 1.html  2.html  3.html  ifeng.html
(+34 files in other folders)
